--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,12 @@
 <h1>hello</h1>
+
+<% if user_signed_in? %>
+  <ul>
+    <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+  </ul>
+<% else %>
+  <ul>
+    <li><%= link_to 'ログイン', new_user_session_path %></li>
+    <li><%= link_to '新規登録', new_user_registration_path %></li>
+  </ul>
+<% end %>
