--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,3 +10,7 @@
     <li><%= link_to '新規登録', new_user_registration_path %></li>
   </ul>
 <% end %>
+
+<div>
+  <%= link_to "登録する", new_book_path %>
+</div>
