--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -14,8 +14,12 @@
 
     <div>
       <%= f.submit "登録する" %>
+    </div>
+
+    <div>
       <%=link_to 'もどる', root_path %>
     </div>
+
     
   <% end %>
 </div>
